[package]
name = "markdown-to-latex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
yaml-rust = "0.4"
regex = "1.5"
lazy_static = "1.4.0"
unicode-segmentation = "1.8.0"
